--- a/UserInterface/Assets/Styling/ToggleButton.xaml
+++ b/UserInterface/Assets/Styling/ToggleButton.xaml
@@ -8,15 +8,15 @@
                 <ControlTemplate TargetType="{x:Type ToggleButton}">
                     <Viewbox Width="100" Height="60">
                         <Border x:Name="Border" CornerRadius="10"
-                        Background="#FFFFFFFF"
-                        Width="40" Height="20">
+                                Background="#FFFFFFFF"
+                                Width="40" Height="20">
                             <Border.Effect>
                                 <DropShadowEffect ShadowDepth="0.5" Direction="0" Opacity="0.3" />
                             </Border.Effect>
                             <Ellipse x:Name="Ellipse" Fill="#FFFFFFFF" Stretch="Uniform"
-                            Margin="2 1 2 1"
-                            Stroke="Gray" StrokeThickness="0.2"
-                            HorizontalAlignment="Stretch">
+                                     Margin="2 1 2 1"
+                                     Stroke="Gray" StrokeThickness="0.2"
+                                     HorizontalAlignment="Stretch">
                                 <Ellipse.Effect>
                                     <DropShadowEffect BlurRadius="10" ShadowDepth="1" Opacity="0.3" Direction="260" />
                                 </Ellipse.Effect>
@@ -24,7 +24,6 @@
                         </Border>
                     </Viewbox>
                     <ControlTemplate.Triggers>
-
                         <Trigger Property="IsChecked" Value="True">
                             <Trigger.EnterActions>
                                 <BeginStoryboard>
@@ -44,7 +43,7 @@
                             </Trigger.EnterActions>
                         </Trigger>
 
-                        <Trigger Property="IsChecked" Value="false">
+                        <Trigger Property="IsChecked" Value="False">
                             <Trigger.EnterActions>
                                 <BeginStoryboard>
                                     <Storyboard>
@@ -62,12 +61,47 @@
                                 </BeginStoryboard>
                             </Trigger.EnterActions>
                         </Trigger>
-                            
+
+                        <EventTrigger RoutedEvent="Checked">
+                            <BeginStoryboard>
+                                <Storyboard>
+                                    <ColorAnimation Storyboard.TargetName="Border"
+                                                    Storyboard.TargetProperty="(Border.Background).(SolidColorBrush.Color)"
+                                                    To="#DA0063"
+                                                    Duration="0:0:0.1" />
+                                    <ThicknessAnimation Storyboard.TargetName="Ellipse"
+                                                        Storyboard.TargetProperty="Margin"
+                                                        To="20 1 2 1"
+                                                        Duration="0:0:0.1" />
+                                </Storyboard>
+                            </BeginStoryboard>
+                        </EventTrigger>
+
+                        <EventTrigger RoutedEvent="Unchecked">
+                            <BeginStoryboard>
+                                <Storyboard>
+                                    <ColorAnimation Storyboard.TargetName="Border"
+                                                    Storyboard.TargetProperty="(Border.Background).(SolidColorBrush.Color)"
+                                                    To="White"
+                                                    Duration="0:0:0.1" />
+                                    <ThicknessAnimation Storyboard.TargetName="Ellipse"
+                                                        Storyboard.TargetProperty="Margin"
+                                                        To="2 1 2 1"
+                                                        Duration="0:0:0.1" />
+                                </Storyboard>
+                            </BeginStoryboard>
+                        </EventTrigger>
+
+                        <DataTrigger Binding="{Binding Active}" Value="True">
+                            <Setter Property="IsChecked" Value="True" />
+                        </DataTrigger>
+
+                        <DataTrigger Binding="{Binding Active}" Value="False">
+                            <Setter Property="IsChecked" Value="False" />
+                        </DataTrigger>
                     </ControlTemplate.Triggers>
                 </ControlTemplate>
             </Setter.Value>
         </Setter>
     </Style>
-
-
 </ResourceDictionary>
