--- a/UserInterface/Views/LoginView.xaml
+++ b/UserInterface/Views/LoginView.xaml
@@ -23,9 +23,10 @@
 
                 <TextBlock 
                     Style="{StaticResource Header}" 
-                    Grid.Row="0"
+                    Grid.Row="1"
                     HorizontalAlignment="Center" 
-                    Text="Vul uw inloggegevens in"/>
+                    VerticalAlignment="Top"
+                    Text="Vul uw inloggegevens in" Margin="0,85,0,0"/>
 
                 <Grid Grid.Row="2" VerticalAlignment="Center" HorizontalAlignment="Center">
                     <Grid.RowDefinitions>
