--- a/UserInterface/Views/TargetAudienceOverviewView.xaml
+++ b/UserInterface/Views/TargetAudienceOverviewView.xaml
@@ -17,8 +17,7 @@
                     Content="Nieuw"/>
             </Grid>
 
-            <!-- TODO add scrollbar -->
-            <ListView Style="{StaticResource ListViewStyle}" ItemsSource="{Binding TargetAudiences}" Margin="0 30 0 0">
+            <ListView Style="{StaticResource ListViewStyle}" Height="580" ItemsSource="{Binding TargetAudiences}" Margin="0 30 0 0">
                 <ListView.ItemContainerStyle>
                     <Style TargetType="{x:Type ListViewItem}" BasedOn="{StaticResource OptionalListViewItemStyle_1}" />
                 </ListView.ItemContainerStyle>
@@ -29,7 +28,7 @@
                             BasedOn="{StaticResource ListViewHeaderStyle}" />
                         </GridView.ColumnHeaderContainerStyle>
 
-                        <GridViewColumn Width="600" Header="Naam">
+                        <GridViewColumn Width="300" Header=" Naam">
                             <GridViewColumn.CellTemplate>
                                 <DataTemplate>
                                     <TextBlock Style="{StaticResource Text}" Text="{Binding Label}"/>
@@ -45,14 +44,26 @@
                             </GridViewColumn.CellTemplate>
                         </GridViewColumn>
 
-                        <GridViewColumn Width="200" Header="Tot">
+                        <GridViewColumn Width="300" Header="Tot">
                             <GridViewColumn.CellTemplate>
                                 <DataTemplate>
                                     <TextBlock Style="{StaticResource Text}" Text="{Binding To}"/>
                                 </DataTemplate>
                             </GridViewColumn.CellTemplate>
                         </GridViewColumn>
-                        
+
+                        <GridViewColumn Width="700" Header="Status">
+                            <GridViewColumn.CellTemplate>
+                                <DataTemplate>
+                                    <ToggleButton 
+                                        IsChecked="{Binding Active}" 
+                                        Command="{Binding DataContext.ToggleStatusCommand, RelativeSource={RelativeSource AncestorType={x:Type local:TargetAudienceOverviewView}}}" 
+                                        CommandParameter="{Binding}"
+                                        Style="{StaticResource ToggleButtonStyle}" />
+                                </DataTemplate>
+                            </GridViewColumn.CellTemplate>
+                        </GridViewColumn>
+
                         <GridViewColumn Width="100">
                             <GridViewColumn.CellTemplate>
                                 <DataTemplate>
@@ -74,7 +85,7 @@
                                     <Button 
                                         Style="{StaticResource SecondaryButton_Icon}"
                                         Command="{Binding DataContext.DeleteCommand, RelativeSource={RelativeSource AncestorType={x:Type local:TargetAudienceOverviewView}}}"
-                                        CommandParameter="{Binding Id }">
+                                        CommandParameter="{Binding Id}">
                                         <Button.Content>
                                             <Image Source="{StaticResource di_trashcan}" Width="30" Height="30"/>
                                         </Button.Content>
