--- a/UserInterface/Views/Employee/EmployeeManagementView.xaml
+++ b/UserInterface/Views/Employee/EmployeeManagementView.xaml
@@ -68,7 +68,7 @@
                 <StackPanel Grid.Row="1" Orientation="Vertical" >
                     <TextBlock Style="{StaticResource Text}" VerticalAlignment="Center" Text="Wachtwoord" Height="58" Width="auto"/>
                     <StackPanel Orientation="Horizontal">
-                        <TextBox IsReadOnly="True" Text="{Binding Password, UpdateSourceTrigger=PropertyChanged}" Margin="15,0,25,0" HorizontalAlignment="Left" Style="{StaticResource InputField_S}"/>
+                        <TextBox IsReadOnly="True"  Text="{Binding Password, UpdateSourceTrigger=PropertyChanged}" Margin="15,0,25,0" HorizontalAlignment="Left" Style="{StaticResource InputField_S}"/>
                         <Button Style="{StaticResource SecondaryButton_Icon}"
                                 Command="{Binding DataContext.GenerateRandomPasswordCommand, RelativeSource={RelativeSource AncestorType={x:Type local:EmployeeManagementView}}}">
                             <Button.Content>
@@ -100,7 +100,7 @@
                 </StackPanel>
                 <StackPanel Grid.Row="3"  Orientation="Horizontal" Margin="0,45,0,0">
                     <TextBlock  Style="{StaticResource Text}" VerticalAlignment="Center" Text="Administrator" Height="58" Width="auto" Margin="0,0,160,0"/>
-                    <ToggleButton IsChecked="{Binding IsAdministrator}" Style="{StaticResource ToggleButtonStyle}"/>
+                    <ToggleButton IsChecked="{Binding IsAdministrator}" Command="{Binding CheckAdministratorStatusCommand}" Style="{StaticResource ToggleButtonStyle}"/>
                 </StackPanel>
             </Grid>
             <Grid Grid.Column="2">
