--- a/UserInterface/Views/Employee/EmployeeOverviewView.xaml
+++ b/UserInterface/Views/Employee/EmployeeOverviewView.xaml
@@ -74,7 +74,7 @@
                                 <GridViewColumn.CellTemplate>
                                     <DataTemplate>
                                         <ToggleButton 
-                                         IsChecked="{Binding Active}" 
+                                         IsChecked="{Binding Active, Mode=TwoWay}" 
                                          Command="{Binding DataContext.ToggleActiveStatusCommand, RelativeSource={RelativeSource AncestorType={x:Type local:EmployeeOverviewView}}}" 
                                          CommandParameter="{Binding Id}"
                                          Style="{StaticResource ToggleButtonStyle}" />
