--- a/UserInterface/Views/Employee/EmployeePortalView.xaml
+++ b/UserInterface/Views/Employee/EmployeePortalView.xaml
@@ -11,7 +11,7 @@
         <StackPanel>
 
             <TextBlock 
-                Style="{StaticResource Header}" 
+                Style="{DynamicResource Header}" 
                 HorizontalAlignment="Center" 
                 Text="Medewerkersportaal" />
 
@@ -25,7 +25,7 @@
 
                 <StackPanel Grid.Column="0" VerticalAlignment="Center">
                     <TextBlock 
-                        Style="{StaticResource Text}" 
+                        Style="{DynamicResource Text}" 
                         HorizontalAlignment="Center"
                         Text="{Binding Employee}"/>
                     
