--- a/UserInterface/Views/Test/TestResultView.xaml
+++ b/UserInterface/Views/Test/TestResultView.xaml
@@ -23,18 +23,18 @@
                 Grid.Column="0"
                 Orientation="Vertical">
                 <TextBlock 
-                    Style="{StaticResource Header}"
+                    Style="{DynamicResource Header}"
                     HorizontalAlignment="Center"
                     Text="Testresultaten"/>
                 <TextBlock 
-                    Style="{StaticResource Text}" 
+                    Style="{DynamicResource Text}" 
                     Text="U heeft de test succesvol afgerond."/>
                 <TextBlock 
-                    Style="{StaticResource SubHeader}"
+                    Style="{DynamicResource SubHeader}"
                     Margin="0 30 0 0"
                     Text="{Binding TestResultText}"/>
                 <TextBlock 
-                    Style="{StaticResource Text}"
+                    Style="{DynamicResource Text}"
                     Margin="0 30 0 0"
                     TextWrapping="Wrap"
                     Text="{Binding TestResultExplanation}"/>
@@ -54,7 +54,7 @@
                 Visibility="{Binding ShowNegativeImage}"/>
 
             <TextBlock
-                Style="{StaticResource Text}"
+                Style="{DynamicResource Text}"
                 Grid.Row="2"
                 Grid.Column="0"
                 Grid.ColumnSpan="2"
@@ -68,13 +68,13 @@
                 Grid.Column="0"
                 Grid.ColumnSpan="2">
                 <TextBlock
-                    Style="{StaticResource Text}"
+                    Style="{DynamicResource Text}"
                     Visibility="{Binding EmailError}"
                     Foreground="Red"
                     Padding="0 0 0 15"
                     Text="Vul een geldige e-mail in"/>
                 <TextBlock
-      Style="{StaticResource Text}"
+      Style="{DynamicResource Text}"
       Visibility="{Binding EmailSuccess}"
       Foreground="Green"
       Padding="0 0 0 15"
