--- a/UserInterface/Views/Test/TestTargetAudienceView.xaml
+++ b/UserInterface/Views/Test/TestTargetAudienceView.xaml
@@ -27,7 +27,7 @@
                         <ColumnDefinition Width="*"></ColumnDefinition>
                     </Grid.ColumnDefinitions>
 
-                    <TextBlock Style="{StaticResource Header}" Grid.RowSpan="1" Text="{Binding TextQuestion}" VerticalAlignment="Center"/>
+                    <TextBlock Style="{DynamicResource Header}" Grid.RowSpan="1" Text="{Binding TextQuestion}" VerticalAlignment="Center"/>
 
                     <StackPanel Grid.Row="1" Visibility="{Binding QuestionRadioButtons}">
                         <ListBox SelectedItem="{Binding SelectedOption}" FontSize="30" ItemsSource="{Binding RadioButtons}"/>
