--- a/UserInterface/Views/Test/TestTextQuestionView.xaml
+++ b/UserInterface/Views/Test/TestTextQuestionView.xaml
@@ -20,13 +20,13 @@
                     <RowDefinition Height="auto"/>
                 </Grid.RowDefinitions>
 
-                <TextBlock Style="{StaticResource Header}" Grid.Row="0" Text="{Binding TextQuestion}" VerticalAlignment="Center"/>
+                <TextBlock Style="{DynamicResource Header}" Grid.Row="0" Text="{Binding TextQuestion}" VerticalAlignment="Center"/>
 
                 <StackPanel Grid.Row="1" Visibility="{Binding QuestionRadioButtons}">
                     <ListBox SelectedItem="{Binding SelectedOption}" FontSize="30" ItemsSource="{Binding RadioButtons}"/>
                 </StackPanel>
 
-                <TextBlock Style="{StaticResource Text}"  Grid.Row="1" VerticalAlignment="Center" Visibility="{Binding QuestionInput}" />
+                <TextBlock Style="{DynamicResource Text}"  Grid.Row="1" VerticalAlignment="Center" Visibility="{Binding QuestionInput}" />
                 <TextBox Style="{StaticResource InputField_L}" Visibility="{Binding QuestionInput}" Text="{Binding QuestionInputText}" Grid.Row="2" HorizontalAlignment="Left" TextWrapping="Wrap" VerticalAlignment="Center" FontSize="20"/>
 
                 <Button 
